Adding backend for login , signup page and Adding Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Table16Restro_Admin</string>
+    <string name="default_web_client_id">466327314075-6blno2c0eaup13jhustu6i224t0jglnu.apps.googleusercontent.com</string>
 </resources>
